syntax = "proto3";
option csharp_namespace = "OzonEdu.MerchandiseService.Grpc";
package MerchService;

import "google/protobuf/wrappers.proto";

service MerchServiceGrpc{
  rpc GiveMerchToEmployee(GiveMerchItemRequest) returns (GiveMerchItemResponse);  
  rpc GetMerchIsIssued(GetMerchItemIsGivenRequest) returns (GetMerchIsIssuedResponse);
}

message GiveMerchItemRequest{
  int32 employee_id = 1;
  int32 merch_id = 2;
  int32 clothing_size_id = 3;
}

message GetMerchItemIsGivenRequest{
  int32 employee_id = 1;
  int32 merch_id = 2;
}

message GiveMerchItemResponse{  
}

message GetMerchIsIssuedResponse{
  google.protobuf.BoolValue is_issued = 1;
}
